# serializer version: 1
# name: test_deraining
  ImageModelDescriptor(
    architecture=RestormerArch(
      id='Restormer',
      name='Restormer',
    ),
    input_channels=3,
    bytes=104506576,
    output_channels=3,
    purpose='Restoration',
    scale=1,
    size_requirements=SizeRequirements(minimum=0, multiple_of=8, square=False),
    supports_bfloat16=True,
    supports_half=False,
    tags=list([
      '48dim',
    ]),
    tiling=<ModelTiling.SUPPORTED: 1>,
  )
# ---
# name: test_dual_pixel_defocus_deblurring
  ImageModelDescriptor(
    architecture=RestormerArch(
      id='Restormer',
      name='Restormer',
    ),
    input_channels=6,
    bytes=104530192,
    output_channels=3,
    purpose='Restoration',
    scale=1,
    size_requirements=SizeRequirements(minimum=0, multiple_of=8, square=False),
    supports_bfloat16=True,
    supports_half=False,
    tags=list([
      '48dim',
    ]),
    tiling=<ModelTiling.SUPPORTED: 1>,
  )
# ---
# name: test_gaussian_color_denoising_blind
  ImageModelDescriptor(
    architecture=RestormerArch(
      id='Restormer',
      name='Restormer',
    ),
    input_channels=3,
    bytes=104446672,
    output_channels=3,
    purpose='Restoration',
    scale=1,
    size_requirements=SizeRequirements(minimum=0, multiple_of=8, square=False),
    supports_bfloat16=True,
    supports_half=False,
    tags=list([
      '48dim',
    ]),
    tiling=<ModelTiling.SUPPORTED: 1>,
  )
# ---
# name: test_gaussian_gray_denoising_sigma25
  ImageModelDescriptor(
    architecture=RestormerArch(
      id='Restormer',
      name='Restormer',
    ),
    input_channels=1,
    bytes=104436304,
    output_channels=1,
    purpose='Restoration',
    scale=1,
    size_requirements=SizeRequirements(minimum=0, multiple_of=8, square=False),
    supports_bfloat16=True,
    supports_half=False,
    tags=list([
      '48dim',
    ]),
    tiling=<ModelTiling.SUPPORTED: 1>,
  )
# ---
# name: test_motion_deblurring
  ImageModelDescriptor(
    architecture=RestormerArch(
      id='Restormer',
      name='Restormer',
    ),
    input_channels=3,
    bytes=104506576,
    output_channels=3,
    purpose='Restoration',
    scale=1,
    size_requirements=SizeRequirements(minimum=0, multiple_of=8, square=False),
    supports_bfloat16=True,
    supports_half=False,
    tags=list([
      '48dim',
    ]),
    tiling=<ModelTiling.SUPPORTED: 1>,
  )
# ---
